InstertList method for DynArray Class
:dancer:

--- a/Game_development.vcxproj
+++ b/Game_development.vcxproj
@@ -68,6 +68,9 @@
     <ClInclude Include="DynArray.h" />
     <ClInclude Include="Point3d.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
