PhysFS library added

--- a/Game_development.vcxproj
+++ b/Game_development.vcxproj
@@ -39,12 +39,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)PhysFS\include;$(ProjectDir)SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)PhysFS\lib\x86;$(ProjectDir)SDL\libx86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)PhysFS\include;$(ProjectDir)SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)PhysFS\lib\x86;$(ProjectDir)SDL\libx86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -54,7 +54,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(ProjectDir)SDL\lib\x86\SDL2.lib;$(ProjectDir)SDL\lib\x86\SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)SDL\lib\x86\SDL2.lib;$(ProjectDir)SDL\lib\x86\SDL2main.lib;$(ProjectDir)PhysFS\libx86\physfs.lib;$(ProjectDir)PhysFS\libx86\physfs.exp;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -69,12 +69,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>$(ProjectDir)SDL\lib\x86\SDL2.lib;$(ProjectDir)SDL\lib\x86\SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)SDL\lib\x86\SDL2.lib;$(ProjectDir)SDL\lib\x86\SDL2main.lib;$(ProjectDir)PhysFS\libx86\physfs.lib;$(ProjectDir)PhysFS\libx86\physfs.exp;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DList.h" />
     <ClInclude Include="DynArray.h" />
+    <ClInclude Include="FileSystem.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Audio.h" />
@@ -91,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="FileSystem.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="Render.cpp" />
