Last stable commit before...
...trying to adapt the Project folder.

--- a/Game_development.vcxproj.filters
+++ b/Game_development.vcxproj.filters
@@ -117,5 +117,8 @@
     <Xml Include="config.xml">
       <Filter>Resource Files</Filter>
     </Xml>
+    <Xml Include="save_game.xml">
+      <Filter>Resource Files</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
