--- a/Game_development.vcxproj
+++ b/Game_development.vcxproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Game\maps\far_west.tmx" />
+    <None Include="Game\maps\iso.tmx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
