--- a/Game_development.vcxproj.filters
+++ b/Game_development.vcxproj.filters
@@ -131,5 +131,8 @@
     <None Include="Game\maps\iso.tmx">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Game\maps\navigation_map.tmx">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
