--- a/Game_development.vcxproj
+++ b/Game_development.vcxproj
@@ -80,10 +80,13 @@
     <ClCompile Include="Motor2D\main.cpp" />
     <ClCompile Include="Motor2D\Maps.cpp" />
     <ClCompile Include="Motor2D\p2Log.cpp" />
+    <ClCompile Include="Motor2D\PathFinding.cpp" />
+    <ClCompile Include="Motor2D\PerfTimer.cpp" />
     <ClCompile Include="Motor2D\PugiXml\src\pugixml.cpp" />
     <ClCompile Include="Motor2D\Render.cpp" />
     <ClCompile Include="Motor2D\Scene.cpp" />
     <ClCompile Include="Motor2D\Textures.cpp" />
+    <ClCompile Include="Motor2D\Timer.cpp" />
     <ClCompile Include="Motor2D\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -98,12 +101,15 @@
     <ClInclude Include="Motor2D\p2Defs.h" />
     <ClInclude Include="Motor2D\p2Log.h" />
     <ClInclude Include="Motor2D\p2SString.h" />
+    <ClInclude Include="Motor2D\PathFinding.h" />
+    <ClInclude Include="Motor2D\PerfTimer.h" />
     <ClInclude Include="Motor2D\Point2d.h" />
     <ClInclude Include="Motor2D\PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="Motor2D\PugiXml\src\pugixml.hpp" />
     <ClInclude Include="Motor2D\Render.h" />
     <ClInclude Include="Motor2D\Scene.h" />
     <ClInclude Include="Motor2D\Textures.h" />
+    <ClInclude Include="Motor2D\Timer.h" />
     <ClInclude Include="Motor2D\Window.h" />
   </ItemGroup>
   <ItemGroup>
