--- a/Game_development.vcxproj.filters
+++ b/Game_development.vcxproj.filters
@@ -62,6 +62,15 @@
     <ClCompile Include="Motor2D\App.cpp">
       <Filter>Application</Filter>
     </ClCompile>
+    <ClCompile Include="Motor2D\PathFinding.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="Motor2D\PerfTimer.cpp">
+      <Filter>Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="Motor2D\Timer.cpp">
+      <Filter>Tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Motor2D\App.h">
@@ -117,6 +126,15 @@
     </ClInclude>
     <ClInclude Include="Motor2D\Maps.h">
       <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Motor2D\PathFinding.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Motor2D\PerfTimer.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
+    <ClInclude Include="Motor2D\Timer.h">
+      <Filter>Tools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
