Added skeleton for UI interface and factories for Image and Label

--- a/Game_development.vcxproj
+++ b/Game_development.vcxproj
@@ -76,6 +76,8 @@
     <ClCompile Include="Motor2D\App.cpp" />
     <ClCompile Include="Motor2D\Audio.cpp" />
     <ClCompile Include="Motor2D\FileSystem.cpp" />
+    <ClCompile Include="Motor2D\Fonts.cpp" />
+    <ClCompile Include="Motor2D\Gui.cpp" />
     <ClCompile Include="Motor2D\Input.cpp" />
     <ClCompile Include="Motor2D\main.cpp" />
     <ClCompile Include="Motor2D\Maps.cpp" />
@@ -95,6 +97,8 @@
     <ClInclude Include="Motor2D\DList.h" />
     <ClInclude Include="Motor2D\DynArray.h" />
     <ClInclude Include="Motor2D\FileSystem.h" />
+    <ClInclude Include="Motor2D\Fonts.h" />
+    <ClInclude Include="Motor2D\Gui.h" />
     <ClInclude Include="Motor2D\Input.h" />
     <ClInclude Include="Motor2D\Maps.h" />
     <ClInclude Include="Motor2D\Module.h" />
